# Future-Config

./: .gitignore  README.md
.cursor/rules/: changelog.mdc
core/: CHANGELOG.md  pom.xml
core/src/main/java/ninja/fido/config/: BuildedConfig.java  Config.java  ConfigBuilder.java  ConfigData.java  ConfigDataList.java  ConfigDataLoader.java  ConfigDataMap.java  ConfigDataObject.java  ConfigDataResolver.java  ConfigParser.java  ConfigProperty.java  ConfigSource.java  Configuration.java  GeneratedConfig.java  JavaLanguageUtil.java  Merger.java  Parser.java  VariableResolver.java
core/src/test/java/builder/: BuilderCompleteTest.java  BuilderDataTypeTest.java  BuilderSimpleArrayTest.java  BuilderTester.java  BuilderTwoLevelArrayTest.java
core/src/test/java/ninja/fido/config/: ParserDataTypeTest.java  ParserSimpleArrayTest.java  ParserTester.java  ParserTwoLevelArrayTest.java
core/src/test/java/ninja/fido/config/builder/: BuilderCompleteTest.java  BuilderDataTypeTest.java  BuilderSimpleArrayTest.java  BuilderTester.java  BuilderTwoLevelArrayTest.java
core/src/test/java/ninja/fido/config/other/: PrintTest.java  VariableIterationTest.java
core/src/test/java/ninja/fido/config/parser/: ParserCompleteTest.java  ParserDataTypeTest.java  ParserSimpleArrayTest.java  ParserStringConcatenationTest.java  ParserTester.java  ParserTwoLevelArrayTest.java
core/src/test/java/ninja/fido/config/resolver/: ResolverTest.java  StringConcatenationTest.java  TwoProjectsEmulationTest.java
core/src/test/resources/ninja/fido/config/: complete.cfg  dataTypes.cfg  simpleArray.cfg
cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Developer Manual.md  Manual.md
cpp/data/: config.jinja
cpp/data/test/builder/: array.h  array_of_objects.h  dependency.h  dependency_test.h  hyphen_in_key.h  one_var.h  root_object_name_sanitization.h  string_array_in_object.h
cpp/include/future-config/: Config_object.h  common.h  configuration.h  format.h  future-config_export.h  loading.h  resources.h
cpp/install/: builderRunner.cmake  fconfigConfig.cmake.in
cpp/port/fconfig/: portfile.cmake  usage  vcpkg.json
cpp/port/future-config/: portfile.cmake  usage  vcpkg.json
cpp/src/: Builder.cpp  Builder.h  Command_line_parser.cpp  Command_line_parser.h  Config_object.cpp  Config_object.h  Merger.cpp  Merger.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  builder_runner.cpp  builder_runner.h  command_line_loading.cpp  common.cpp  common.h  configuration.cpp  configuration.h  loading.cpp  resources.cpp  variable_processing.cpp
cpp/test/: CMakeLists.txt  bulider_tests.cpp  common.cpp  common.h  config_object_test.cpp  configuration_test.cmake  ctest_starter.cmake  install_gcc-11-mamba.sh  merger_test.cpp  resolver_tests.cpp  run_main_tests.ps1  run_tests_on_all_platforms.ps1  run_usage_tests.ps1  run_vcpkg_tests.ps1
cpp/test/usage_test/: CMakeLists.txt  CTestConfig.cmake  config.yaml  ctest_starter.cmake
cpp/test/usage_test/data/: config.yaml
cpp/test/usage_test/src/: main.cpp
cpp/test/usage_test/src/config/: future-config-usage-test_config.h
cpp/test/vcpkg_gcc11/: install_gcc-11-mamba.sh  linux.cmake  x64-linux-gcc11.cmake
cpp/test/vcpkg_tests/: CMakeLists.txt  ctest_starter.cmake
doc/: C++.md
gradle-plugin/: settings.gradle
maven-plugin/: CHANGELOG.md  nbactions.xml  pom.xml
maven-plugin/src/it/: settings.xml
maven-plugin/src/it/single-project-it/: pom.xml
maven-plugin/src/main/java/ninja/fido/config/plugin/: ConfigBuilder.java  Plugin.java  PluginTools.java
maven-plugin/src/test/java/ninja/fido/config/builder/: BuilderCompleteTest.java  BuilderDataTypeTest.java  BuilderSimpleArrayTest.java  BuilderTester.java  BuilderTwoLevelArrayTest.java
python/: CHANGELOG.md  LICENSE.txt  builder.py  config.py  config_data_object.py  config_property.py  config_template.txt  configuration.py  loader.py  merger.py  parser.py  requirements.txt  resolver.py  setup.py
python/fconfig/: builder.py  common.py  config.py  config_data_object.py  config_property.py  config_root_template.txt  config_template.txt  configuration.py  loader.py  parser.py  resolver.py
python/fconfig/templates/: config_template-old.txt  config_template.txt
python/fconfig/test/: builder_complete_test.py  builder_test.py  parser_test.py
python/fconfig/test/resources/: complete.cfg  complete_child_project.cfg  complete_child_project_override.cfg  complete_override.cfg  dataTypes.cfg  data_types.cfg  one_letter_key.cfg  one_var.cfg  simpleArray.cfg  string_array_in_object.cfg  string_concatenation.cfg  twoLevelArray.cfg  use_vars_from_master-client.cfg  use_vars_from_master-master.cfg
python/fconfig/test/resources/builder/: array_of_objects-array.py  array_of_objects-object.py  array_test.py  array_test_root.py  one_var.py  string_array_in_object-array.py  string_array_in_object-root.py
test-project/: pom.xml
test-project-gradle/: build.gradle  settings.gradle
test-project-gradle/src/main/java/ninja/fido/config/testproject/: ClientIn.java
test-project/src/main/java/: FullTest.java
test-project/src/main/java/ninja/fido/config/testproject/: ClientIn.java  FullTest.java
test-project/src/main/java/ninja/fido/config/testproject/config/: ArrayOfObjectsItem.java  Object.java  ObjectHierarchy.java  ObjectHierarchyArrayOfObjectsItem.java  TestprojectConfig.java
test-project/src/test/java/ninja/fido/config/testproject/: SingleProjectTest.java
test-resources/: pom.xml
test-resources/src/main/resources/ninja/fido/config/: complete.cfg  complete_child_project.cfg  complete_child_project_override.cfg  complete_override.cfg  simpleArray.cfg  string_concatenation.cfg  twoLevelArray.cfg
testproject-client/: nbactions.xml  pom.xml
testproject-client/src/main/java/ninja/fido/config/testprojectclient/config/: Config.java  TestprojectclientConfig.java
testproject-client/src/main/resources/ninja/fido/config/testprojectclient/config/: config.cfg  local_config.cfg
testproject-client/src/test/java/ninja/fido/config/testproject/: ClientTest.java  ClientWithLocalConfigTest.java
(+4 files in other folders)
